aws3/ec2.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: Cvicenie 3 - EC2 instances & auto-scaling & load-balancing

###########################################################################
# Useful CloudFormation docs
###########################################################################
# functions:         https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/intrinsic-function-reference.html
# pseudo parameters: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/pseudo-parameter-reference.html
# pseudo attributes: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-product-attribute-reference.html
# template sections: https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/template-anatomy.html
##########################################################################

Parameters:
  Project:
    Description: Project
    Type: String
    Default: FRI

  Environment:
    Description: Environment
    Type: String
    Default: lab

  NetworkStackName:
    Description: Name of parent network CloudFormation stack (without .yaml suffix)
    Type: String
    Default: basic-network

  OurPublicIp:
    Description: Our source public IPv4 address
    Type: String
    Default: '158.193.130.154/32'

  ImageId:
    Description: AMI (Amazon Machine Image) ID
    Type: String
    # more info: https://docs.amazonaws.cn/en_us/AWSEC2/latest/UserGuide/finding-an-ami.html
    # list of usable AMIs can be found in AWS console -> EC2 -> AMI Catalog
    # Amazon Linux 2023 64-bit x86 (HVM), Kernel 6.1, SSD Volume Type, us-east-1
    Default: ami-0f3caa1cf4417e51b

  InstanceType:
    Description: Instance type (number of vCPUs, memory, bandwidth, etc.)
    Type: String
    # "t3" family = General purpose, Intel Xeon Platinum 8000 series; "small" size = 2 vCPUs, 2 GB memory
    # more info: https://aws.amazon.com/ec2/instance-types/t3/
    Default: t3.small

  IamInstanceProfileName:
    Description: Instance IAM profile name
    Type: String
    # it's unique in each account. can be found in IAM service as AmazonSSMRoleForInstancesQuickSetup (part of Instance profile ARN)
    # e.g. c76725a1578383l3622172t1w333290784692-SsmRoleInstanceProfile-apue5UBzE6mA
    Default: c201421a5141573l13826754t1w745863548161-SsmRoleInstanceProfile-BxS4oOW3Yq7g


Resources:
  ###########################################################################
  ### Part 1 - security groups (firewall) & SSH key pair
  ###########################################################################
  SSHKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub "${Project}-${Environment}-keypair"
      KeyType: rsa
      KeyFormat: pem
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${Environment}-keypair"
        - Key: Project
          Value: !Ref Project
        - Key: Environment
          Value: !Ref Environment

  SecurityGroupForPublicInstances:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for public-facing instances (SSH from our IP only, outbound HTTP/HTTPS)
      VpcId:
        Fn::ImportValue: !Sub "${NetworkStackName}-VpcId"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref OurPublicIp
          Description: SSH access from our public IP
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Allow outbound HTTP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Allow outbound HTTPS
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${Environment}-public-sg"
        - Key: Project
          Value: !Ref Project
        - Key: Environment
          Value: !Ref Environment

  SecurityGroupForPrivateInstances:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for private instances (SSH+HTTP from VPC CIDR only, outbound HTTP/HTTPS)
      VpcId:
        Fn::ImportValue: !Sub "${NetworkStackName}-VpcId"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp:
            Fn::ImportValue: !Sub "${NetworkStackName}-VpcCidr"
          Description: SSH from within VPC
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp:
            Fn::ImportValue: !Sub "${NetworkStackName}-VpcCidr"
          Description: HTTP from within VPC
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: Allow outbound HTTP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: Allow outbound HTTPS
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${Environment}-private-sg"
        - Key: Project
          Value: !Ref Project
        - Key: Environment
          Value: !Ref Environment
  ###########################################################################
  ### Part 2 - testovacia verejná EC2 instance
  ###########################################################################

  PublicInstanceA:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref SSHKeyPair
      IamInstanceProfile: !Ref IamInstanceProfileName
      SubnetId:
        Fn::ImportValue: !Sub "${NetworkStackName}-PublicSubnetAId"
      SecurityGroupIds:
        - !Ref SecurityGroupForPublicInstances
      AvailabilityZone: !Select [0, !GetAZs '']
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
            VolumeType: gp2
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${Environment}-public-instance-A"
        - Key: Project
          Value: !Ref Project
        - Key: Environment
          Value: !Ref Environment

  PrivateInstanceA:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref SSHKeyPair
      IamInstanceProfile: !Ref IamInstanceProfileName
      SubnetId:
        Fn::ImportValue: !Sub "${NetworkStackName}-PrivateSubnetAId"
      SecurityGroupIds:
        - !Ref SecurityGroupForPrivateInstances
      AvailabilityZone: !Select [0, !GetAZs '']
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum update -y
          yum install -y httpd
          systemctl enable httpd
          systemctl start httpd
          echo "<h1>Hello from PrivateInstanceA - ${AWS::StackName}</h1>" > /var/www/html/index.html
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
            VolumeType: gp2
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${Environment}-private-A"
        - Key: Project
          Value: !Ref Project
        - Key: Environment
          Value: !Ref Environment

  PrivateInstanceB:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      KeyName: !Ref SSHKeyPair
      IamInstanceProfile: !Ref IamInstanceProfileName
      SubnetId:
        Fn::ImportValue: !Sub "${NetworkStackName}-PrivateSubnetBId"
      SecurityGroupIds:
        - !Ref SecurityGroupForPrivateInstances
      AvailabilityZone: !Select [1, !GetAZs '']
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          yum update -y
          yum install -y httpd
          systemctl enable httpd
          systemctl start httpd
          echo "<h1>Hello from PrivateInstanceB - ${AWS::StackName}</h1>" > /var/www/html/index.html
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
            VolumeType: gp2
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub "${Project}-${Environment}-private-B"
        - Key: Project
          Value: !Ref Project
        - Key: Environment
          Value: !Ref Environment
